--- a/.github/workflows/azure.yml
+++ b/.github/workflows/azure.yml
@@ -3,7 +3,7 @@ name: Deploy to Azure Web App
 on:
   push:
     branches:
-      - main  # main 브랜치에 푸시될 때 배포
+      - main
 
 jobs:
   build-and-deploy:
@@ -20,11 +20,12 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
+        python -m ensurepip --upgrade  # Ensure pip is installed
+        python -m pip install --upgrade pip  # Upgrade pip
         pip install -r requirements.txt
 
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
       with:
-        app-name: YOLOAppService  # App Service 이름
+        app-name: YOLOAppService
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
