--- a/.github/workflows/azure.yml
+++ b/.github/workflows/azure.yml
@@ -20,9 +20,9 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m ensurepip --upgrade  # Ensure pip is installed
+        python -m ensurepip  # Ensure pip is installed
         python -m pip install --upgrade pip  # Upgrade pip
-        pip install -r requirements.txt
+        python -m pip install -r requirements.txt  # Install dependencies
 
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
