--- a/.github/workflows/azure.yml
+++ b/.github/workflows/azure.yml
@@ -18,11 +18,15 @@ jobs:
       with:
         python-version: '3.11'
 
+    - name: Initialize Python Environment
+      run: |
+        python -m pip uninstall -y pip setuptools wheel
+        python -m ensurepip
+        python -m pip install --upgrade pip setuptools wheel
+
     - name: Install dependencies
       run: |
-        python -m ensurepip  # Ensure pip is installed
-        python -m pip install --upgrade pip  # Upgrade pip
-        python -m pip install -r requirements.txt  # Install dependencies
+        python -m pip install -r requirements.txt
 
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
