--- a/.github/workflows/azure.yml
+++ b/.github/workflows/azure.yml
@@ -18,11 +18,10 @@ jobs:
       with:
         python-version: '3.11'
 
-    - name: Initialize Python Environment
+    - name: Force reinstall pip
       run: |
-        python -m pip uninstall -y pip setuptools wheel
-        python -m ensurepip
-        python -m pip install --upgrade pip setuptools wheel
+        python -m ensurepip --upgrade
+        python -m pip install pip==24.3.1 --force-reinstall
 
     - name: Install dependencies
       run: |
