--- a/.github/workflows/azure.yml
+++ b/.github/workflows/azure.yml
@@ -18,17 +18,21 @@ jobs:
       with:
         python-version: '3.11'
 
-    - name: Force reinstall pip
-      run: |
-        python -m ensurepip --upgrade
-        python -m pip install pip==24.3.1 --force-reinstall
-
     - name: Install dependencies
       run: |
+        python -m pip install --upgrade pip setuptools wheel
         python -m pip install -r requirements.txt
+
+    - name: Set up startup script
+      run: echo 'streamlit run app.py --server.port 8000 --server.headless true' > /opt/startup/startup.sh
 
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
       with:
         app-name: YOLOAppService
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+
+    - name: Set environment variables
+      run: |
+        echo "PORT=8000" >> $GITHUB_ENV
+        echo "PYTHONUNBUFFERED=1" >> $GITHUB_ENV
