--- a/.github/workflows/azure.yml
+++ b/.github/workflows/azure.yml
@@ -1,38 +1,44 @@
-name: Deploy to Azure Web App
+name: Deploy Streamlit App to Azure Web App
 
 on:
   push:
     branches:
-      - main
+      - main  # main 브랜치에 push될 때 트리거
 
 jobs:
   build-and-deploy:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  # GitHub Actions에서 Ubuntu 환경 사용
 
     steps:
+    # 1. 코드 체크아웃
     - name: Checkout repository
       uses: actions/checkout@v3
 
+    # 2. Python 설정
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.11'
+        python-version: '3.11'  # Python 버전 설정
 
+    # 3. 종속성 설치
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip setuptools wheel
         python -m pip install -r requirements.txt
 
-    - name: Set up startup script
-      run: echo 'streamlit run app.py --server.port 8000 --server.headless true' > /opt/startup/startup.sh
-
-    - name: Deploy to Azure Web App
-      uses: azure/webapps-deploy@v2
-      with:
-        app-name: YOLOAppService
-        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-
+    # 4. 환경 변수 설정
     - name: Set environment variables
       run: |
         echo "PORT=8000" >> $GITHUB_ENV
         echo "PYTHONUNBUFFERED=1" >> $GITHUB_ENV
+
+    # 5. Azure App Service에서 Streamlit 시작 스크립트 설정
+    - name: Set up startup script
+      run: echo 'streamlit run app.py --server.port 8000 --server.headless true' > /opt/startup/startup.sh
+
+    # 6. Azure Web App으로 배포
+    - name: Deploy to Azure Web App
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: YOLOAppService  # Azure Web App 이름
+        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}  # GitHub Secrets에 저장된 Azure Publish Profile 사용
